# visu-hlo

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  visu_hlo.py
.github/workflows/: ci.yml
docs/: README.md
docs/source/: conf.py  developer-guide.md  development.md  index.md  quickstart.ipynb  quickstart.md  reference-guide.md
docs/source/api/: index.md
docs/source/examples/: control_flow.ipynb  index.md  matrix_operations.ipynb
docs/source/user-guide/: control-flow.ipynb  getting-started.ipynb  installation.md  matrix-operations.ipynb  transformations.ipynb
src/visu_hlo/: __init__.py  _api.py  _display.py  _hlo.py  _interactive.py
tests/: test_api.py  test_display.py  test_dot_graph.py  test_hlo.py  test_integration.py  test_interactive.py  test_platform.py  test_show.py
